@@ -1,22 +1,20 @@
 package ru.package01.mycache;
 
-
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.util.*;
 
-public class MyCache<K, V> implements HwCache<K, V>, HwListener<K, V> {
+
+public class MyCache<K, V> implements HwCache<K, V> {
     //Надо реализовать эти методы
     private static final int MAX_MY_CACHE_SIZE = 5;
     private static final Logger logger = LoggerFactory.getLogger(MyCache.class);
-    private Map<K, V> myCache = new WeakHashMap<K, V>();
-    private List<K> listOfKeys = new ArrayList<>();
+    private final Map<K, V> myCache = new WeakHashMap<K, V>();
+    private final LinkedList<K> listOfKeys = new LinkedList<>();
+    HwListener<K, V> listener;
     private final List<HwListener<K, V>> listenersList = new ArrayList<>();
 
-    MyCache(Map myCache) {
-        this.myCache = myCache;
-    }
 
     public MyCache() {
 
@@ -24,13 +22,14 @@ public class MyCache<K, V> implements HwCache<K, V>, HwListener<K, V> {
 
     @Override
     public void put(K key, V value) {
+        addListener(listener);
         if (myCache.size() < MAX_MY_CACHE_SIZE) {
             myCache.put(key, value);
-            listOfKeys.add(key);
+            listOfKeys.addLast(key);
         } else {
             myCache.put(key, value);
             myCache.remove(listOfKeys.get(0));
-            listOfKeys.remove(0);
+            listOfKeys.removeFirst();
             listOfKeys.add(key);
         }
         notify(key, value, "put");
@@ -41,6 +40,7 @@ public class MyCache<K, V> implements HwCache<K, V>, HwListener<K, V> {
         notify(key, myCache.get(key), "remove");
         myCache.remove(key);
         listOfKeys.remove(key);
+        listenersList.remove(key);
     }
 
     @Override
@@ -56,11 +56,13 @@ public class MyCache<K, V> implements HwCache<K, V>, HwListener<K, V> {
 
     @Override
     public void removeListener(HwListener<K, V> listener) {
-        listenersList.remove(listener);
+        myCache.clear();
+        listOfKeys.clear();
+        listenersList.clear();
     }
 
-    @Override
     public void notify(K key, V value, String action) {
         logger.info("key:{}, value:{}, action: {}", key, value, action);
     }
+
 }
